--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   --Cyan: hsl(179, 62%, 43%);
   --LtCyan: hsl(179, 62%, 46%);
   --yellow: hsl(71, 73%, 54%);
+  --dkyellow: hsl(71, 73%, 45%);
   --Ltgrey: hsl(204, 43%, 93%);
   --grayblue: hsl(218, 22%, 67%);
   --paddingY: 1.5rem;
@@ -38,19 +39,33 @@ h3 {
   line-height: 1.1;
 }
 h2 {
-  font-size:1.25rem
+  font-size: 1.25rem;
   margin-bottom: 1.25rem;
 }
 h3 {
-  font-size:1.1rem;
+  font-size: 1.1rem;
 }
+p {
+  margin-top: 0;
+}
+
 .price {
   border-radius: 0.5rem;
   overflow: hidden;
-  @media only screen and (min-width: 62.5rem) {
+  max-width: 40rem;
+  margin: auto;
+}
+@media only screen and (min-width: 62.5rem) {
+  .price {
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
+  }
+  .community {
+    grid-column: 1 / 3;
   }
 }
+
 .price > * {
   padding: var(--paddingX) var(--paddingY);
 }
@@ -67,17 +82,69 @@ h3 {
   color: var(--yellow);
   font-weight: bold;
   font-size: 1rem;
+  margin-bottom: 1rem;
 }
 .community p {
   line-height: 1.75;
   font-size: 0.85rem;
 }
 
-.subscription, .why {
-  color: var(--Ltgrey)
+.subscription,
+.why {
+  color: var(--Ltgrey);
 }
 
 .subscription {
   background-color: var(--Cyan);
-  color:var(--Ltgrey)
+  color: var(--Ltgrey);
+}
+
+.subscription__price {
+  display: flex;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 0.25rem;
+  align-items: center;
+}
+.subscription__price span {
+  display: flex;
+  font-size: 1rem;
+  opacity: 0.8;
+  margin-left: 0.8rem;
+  font-weight: normal;
+}
+
+.subscription p {
+  font-size: 0.9rem;
+  margin-bottom: 1.75rem;
+}
+
+.subscription a {
+  background-color: var(--yellow);
+  color: var(--white);
+  padding: 0.7rem;
+  display: block;
+  text-align: center;
+  border-radius: 0.25rem;
+  box-shadow: 0 5px 1rem rgba(0, 0, 0, 0.15);
+  transition: background-color 200ms ease;
+}
+
+.why {
+  background-color: var(--LtCyan);
+}
+.why ul {
+  margin-top: 0;
+  padding: 0;
+}
+.subscription a:hover {
+  background-color: var(--dkyellow);
+}
+.why ul li {
+  list-style-type: none;
+  font-size: 0.85rem;
+  margin-bottom: 0.2rem;
+}
+.attribution {
+  margin-top: 1rem;
 }
